# artcraft

./: .dockerignore  .env  .env-download-job  .env-local-proxy  .env-no-proxy  .env-template  .eslintrc.cjs  .gitattributes  .gitignore  .prettierrc  .yarnrc.yml  CLAUDE.md  Cargo.toml  Cranky.toml  Dockerfile  FIX_PHONEMES.md  LICENSE.md  MERGE_TODO.md  README.md  README_OLD.md  ROADMAP.md  TODO.md  _redirects  about.html  api_docs.html  bower.json  build-ci.sh  build-fakeyou.com.sh  build-fakeyou.sh  build-power.stream-obs.sh  build-power.stream.sh  build-storyteller-home.sh  build-storyteller-obs.sh  build-storyteller-stream.sh  build-storyteller.io.sh  build-storyteller.sh  build-trumped.com.sh  build.rs  build.sh  codegen_database.sh  (+57 more)
app/http_server_common/: Cargo.toml
app/http_server_common/src/: lib.rs
app/http_server_common/src/endpoints/: root_index.rs
app/http_server_common/src/response/: response_error_helpers.rs  response_success_helpers.rs  serialize_as_json_error.rs
app/lib/http_server_common/: Cargo.toml
app/storyteller_web/: Cargo.toml
app/storyteller_web/src/: main.rs  obs_gateway_server.rs  tts_download_job.rs  w2l_download_job.rs  w2l_inference_job.rs
app/storyteller_web/src/job_queries/: mod.rs  tts_download_job_queries.rs  tts_inference_job_queries.rs  w2l_inference_job_queries.rs
app/storyteller_web/src/util/: mod.rs  semi_persistent_cache_dir.rs
app/storyteller_web/src/validations/: ip_addresses.rs  mod.rs
crates/_types/buckets/: Cargo.toml
crates/_types/buckets/src/: lib.rs
crates/_types/enums/: Cargo.toml
crates/_types/enums/src/: lib.rs  macros.rs  test_helpers.rs
crates/_types/enums_public/: Cargo.toml
crates/_types/enums_public/src/: lib.rs  test_helpers.rs
crates/_types/reusable_types/: Cargo.toml
crates/_types/reusable_types/src/: lib.rs  server_environment.rs
crates/_types/tokens/: Cargo.toml
crates/_types/tokens/src/: deterministic_rng.rs  lib.rs  macros.rs  prefixes.rs
crates/_types/tokens/tests/: media_file_token_tests.rs  media_upload_token_tests.rs  user_token_tests.rs
crates/api_clients/cloud_storage/: Cargo.toml
crates/api_clients/fakeyou_client/: Cargo.toml
crates/api_clients/google_drive_common/: Cargo.toml
crates/api_clients/google_drive_downloader/: Cargo.toml
crates/api_clients/muapi_client/: Cargo.toml
crates/api_clients/muapi_client/src/: lib.rs
crates/api_clients/rootly_client/: Cargo.toml
crates/api_clients/rootly_client/src/: lib.rs
crates/api_clients/seedance2pro_client/: Cargo.toml
crates/api_clients/seedance2pro_client/src/: lib.rs
crates/cli/database_backup/: Cargo.toml
crates/cli/database_backup/src/: main.rs
crates/cli/database_cleanup/: Cargo.toml
crates/cli/database_cleanup/src/: main.rs
crates/cli/dev_database_seed/: Cargo.toml
crates/cli/dev_database_seed/src/: cli_args.rs  main.rs
crates/cli/dev_upload_media_file/: Cargo.toml
crates/cli/dev_upload_media_file/src/: cli_args.rs  main.rs
crates/cli/kube_pod_cleanup/: Cargo.toml
crates/cli/kube_pod_cleanup/src/: delete_pods.rs  list_pods.rs  main.rs
crates/cli/kubectl-pod-cleanup/: Cargo.toml
crates/cli/kubectl-pod-cleanup/src/: delete_pods_threaded.rs  main.rs  pod_store.rs
crates/cli/kubectl_pod_cleanup/: Cargo.toml
crates/cli/kubectl_pod_cleanup/src/: delete_pods.rs  delete_pods_threaded.rs  list_pods.rs  main.rs  pod_store.rs
old_code/discord-vocodes-bot/: Cargo.toml  Dockerfile  README.md
old_code/discord-vocodes-bot/.github/workflows/: publish-to-gpr.yml
old_code/discord-vocodes-bot/script/: launch.sh
old_code/discord-vocodes-bot/src/: main.rs  vocodes_api.rs
old_code/pubsub-enricher/: .env-template  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs
old_code/pubsub-enricher/src/: main.rs  secrets.rs
old_code/pubsub-enricher/src/clients/: mod.rs
old_code/pubsub-enricher/src/handlers/: mod.rs  vocode_handler.rs
old_code/pubsub-enricher/src/proto_codegen/: storyteller.pubsub.rs
old_code/pubsub-enricher/src/protos/: binary_encode_proto.rs  mod.rs  outbound_proto_utils.rs  populate_source.rs
old_code/pubsub-enricher/src/text_chat_parsers/: first_pass_command_parser.rs  mod.rs
old_code/realtime-voice-conversion/: .gitignore  Cargo.toml
old_code/realtime-voice-conversion/protos/: audio.proto
old_code/twitch-ingestion-client/: .gitmodules  Cargo.toml  Dockerfile  README.md
old_code/twitch-ingestion-client/src/: main.rs  secrets.rs
tacotron_melgan/: Cargo.toml  README.md  jit_containerize_tensor.py  layers.py  requirements.txt  tacotron_model.py  wrap_melgan_model.py  wrap_tacotron2_model.py  wrap_torch_model.py
tacotron_melgan/src/: main.rs  melgan.rs  model.rs  server.rs  tacotron.rs
tacotron_tensorflow/: Cargo.toml
tts_service/: .env  Cargo.toml  bonus_voices.toml  deployed_models.toml  models.toml
tts_service/migrations/2020-05-31-184234_create_sentences/: up.sql
tts_service/migrations/2020-06-24-102510_widen_speaker/: up.sql
tts_service/script/: launch.sh
tts_service/src/: config.rs  main.rs  model.rs  old_model.rs  schema.rs  text.rs
tts_service/src/actors/: mod.rs  stats_recorder_actor.rs
tts_service/src/bonus_voices/: config.rs  endpoints.rs
tts_service/src/database/: connector.rs  mod.rs  model.rs  sentence_recorder.rs
tts_service/src/early_access/: config.rs  endpoints.rs
tts_service/src/endpoints/: index.rs  legacy_speak.rs  liveness.rs  mod.rs  models.rs  readiness.rs  sentences.rs  service_settings.rs  speak.rs  speak_with_spectrogram.rs  speakers.rs  tts.rs  words.rs
tts_service/src/endpoints/speak/: api.rs  (+4 more)
tts_service/src/inference/: inference.rs  mod.rs  spectrogram.rs  tts_model.rs
tts_service/src/model/: arpabet_glow_tts_model.rs  arpabet_glow_tts_multi_speaker_model.rs  arpabet_tacotron_model.rs  melgan_model.rs  mod.rs  model_cache.rs  model_config.rs  model_container.rs  old_model.rs  pipelines.rs
tts_service/src/rate_limiter/: mod.rs  noop_rate_limiter.rs  rate_limiter.rs  redis_rate_limiter.rs
tts_service/src/redis/: rate_limiter.rs
tts_service/src/text/: arpabet.rs  checker.rs  cleaners.rs  mod.rs
(+10502 files in other folders)
