[workspace]

members = [
  # Types: common strongly-typed tokens, ids, payloads, etc.
  # Also common cloud buckets and other "strongly typed" configs.
  "crates/_types/buckets",
  "crates/_types/enums",
  "crates/_types/reusable_types", # TODO(bt, 2022-12-21): Deprecate
  "crates/_types/tokens",

  # CLI tools for operations, etc.
  "crates/cli/database_backup",
  "crates/cli/database_cleanup",
  "crates/cli/scrape_test",

  # Shared libraries
  "crates/lib/actix_helpers",
  "crates/lib/cloud_storage",
  "crates/lib/concurrency",
  "crates/lib/config", # TODO(bt, 2023-02-13): Deprecate or repurpose
  "crates/lib/container_common", # TODO(bt, 2023-02-13): Pull apart and rehome pieces
  "crates/lib/crockford",
  "crates/lib/database_queries", # TODO(bt2, 2023-02-13): Rename "mysql_queries", though this will not live beyond a single DB
  "crates/lib/datetimes",
  "crates/lib/errors",
  "crates/lib/fakeyou_client",
  "crates/lib/files",
  "crates/lib/google_drive_common",
  "crates/lib/hashing",
  "crates/lib/http_server_common",
  "crates/lib/idempotency",
  "crates/lib/jobs_common",
  "crates/lib/media",
  "crates/lib/memory_caching",
  "crates/lib/redis_common",
  "crates/lib/sqlite_queries",
  "crates/lib/subprocess_common",
  "crates/lib/tts_common",
  "crates/lib/twitch_common",
  "crates/lib/url_config",
  "crates/lib/user_input_common",
  "crates/lib/web_scrapers",

  # Programs: Desktop apps
  "crates/programs/aichatbot-sidecar",

  # Services: API servers, jobs, workers, etc.
  "crates/service/job/analytics_job",
  "crates/service/job/download_job",
  "crates/service/job/inference_job",
  "crates/service/job/tts_download_job",
  "crates/service/job/tts_inference_job",
  "crates/service/job/w2l_download_job",
  "crates/service/job/w2l_inference_job",
  "crates/service/other/twitch_pubsub_subscriber",
  "crates/service/web/image_generation_service",
  "crates/service/web/storyteller_web",
  "crates/service/web/websocket_gateway",

  # Service Plugins: complete subsystems that can be plugged into services (users, billing, etc.)
  "crates/service/plugins/billing",
  "crates/service/plugins/inference_workloads",
  "crates/service/plugins/users",
]
