[package]
name = "tacotron_melgan"
version = "0.0.1"
authors = [ "Brandon Thomas <bt@brand.io>",
            "Brandon Thomas <echelon@gmail.com>" ]

[[bin]]
name = "tacotron_melgan"
path = "src/main.rs"

[dependencies]
hound = "3.4.0" # wav codec
rand = "0.7.2" # random sampling for testing (TODO: temp)
rocket = "0.4.2" # http server
rocket_contrib = "0.4.2" # http server
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
tch = "0.1.3" # libtorch bindings (pytorch)
