[package]
name = "tts_service"
edition = "2018"
version = "0.0.2"
authors = [
  "Brandon Thomas <bt@brand.io>",
  "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[[bin]]
name = "tts_service"
path = "src/main.rs"

[dependencies]
actix-cors = "0.2.0"
actix-files= "0.2.1"
actix-rt = "1.0.0"
actix-utils = "1.0.3"
actix-web = "2.0.0"
hound = "3.4.0" # wav codec
serde = "1.0.104"
serde_derive = "1.0.104"
tch = "0.1.3" # libtorch bindings (pytorch)

# My libraries
arpabet = "1.0.0"
numerics = "0.0.1"
sentence = "0.0.1"
