[package]
name = "tts_service"
edition = "2018"
version = "0.0.2"
authors = [
  "Brandon Thomas <bt@brand.io>",
  "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[[bin]]
name = "tts_service"
path = "src/main.rs"

[dependencies]
actix-cors = "0.2.0"
actix-files= "0.2.1"
actix-rt = "1.0.0"
actix-utils = "1.0.3"
actix-web = "2.0.0"
anyhow = "1.0.30"
chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "1.4.4", features = ["mysql", "r2d2", "chrono"] }
env_logger = "0.7.1"
hostname = "0.3.1"
hound = "3.4.0" # wav codec
log = "0.4.8"
serde = "1.0.104"
serde_derive = "1.0.104"
tch = "0.1.7" # libtorch bindings (pytorch)
toml = "0.5.6"

# My libraries
arpabet = "1.0.0"
numerics = "0.0.1"
sentence = "0.0.2"
