[package]
name = "http_server_common"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
name = "http_server_common"
path = "src/lib.rs"

[dependencies]

# External
anyhow = "1.0.40"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.14"

# Web
# NB: Versions aren't pinned since some apps use ver 3 vs ver 4.
# This is because of the Tokio runtime requirements.
#actix-http = "*"
#actix-web = "*"
#actix-http = "3.0.0-beta.11"
#actix-http = "2.2.0"
#actix-web = "4.0.0-beta.10"
#actix-web = "3.3.2"

actix-http-old = { package = "actix-http", version = "2.2.0", optional = true }
actix-web-old = { package = "actix-web", version = "3.3.2", optional = true }

actix-http-new = { package = "actix-http", version = "3.0.0-beta.11", optional = true }
actix-web-new = { package = "actix-web", version = "4.0.0-beta.10", optional = true }

# Serialization
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
toml = "0.5.8"

[features]
actix-new = ["actix-http-new", "actix-web-new"]
actix-old = ["actix-http-old", "actix-web-old"]
