[package]
name = "discord-vocodes"
edition = "2018"
version = "0.0.1"
authors = [
  "Brandon Thomas <bt@brand.io>",
  "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[[bin]]
name = "discord-vocodes"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.31"
env_logger = "0.7.1"
#futures = "0.3"
hyper = "0.13"
hyper-tls = "0.4.3"
log = "0.4.8"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.55"
tokio = { version = "0.2", features = ["full"] }
#toml = "0.5.6"

[dependencies.serenity]
features = ["framework", "standard_framework"]
version = "0.9.0-rc.1"
