[package]
name = "voice_conversion_sidecar"
version = "0.1.0"
authors = [ "Brandon Thomas <bt@brand.io>",
            "Brandon Thomas <echelon@gmail.com>" ]
[[bin]]
name = "voice_converter_sidecar"
path = "src/main.rs"

[dependencies]
byteorder = "1.3.2" # byte-level operations
bytes = "0.4.12" # required by 'prost'
cpal = "0.10.0" # hardware audio out
failure = "0.1.5" # required by cpal
prost = "0.5.*" # protobuf
prost-types = "0.5.0" # protobuf
wavy = "0.1.2" # real time audio capture and playback
# TODO: Move these into the voder project workspace.
world-sys = { path = "/home/bt/dev/world-sys" } # AWESOME WORLD VOCODER BINDINGS HAH HA HAH
zmq = "0.9.2" # zeromq

[build-dependencies]
prost-build = "0.5.0"
