[package]
name = "http_server_common"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
name = "http_server_common"
path = "src/lib.rs"

[dependencies]

# External
anyhow = "1.0.40"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.14"

# Web
actix-cors = "0.6.0-beta.3"
actix-http = "3.0.0-beta.11"
#actix-web = "4.0.0-beta.10"
actix-web = "4.0.0-beta.7"

# Serialization
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
toml = "0.5.8"
