[package]
name = "buckets"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
name = "buckets"
path = "src/lib.rs"

[dependencies]

# Internal
errors = { path = "../../lib/errors" }

# External
# (none)

[dev-dependencies]
