[package]
name = "buckets"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
name = "buckets"
path = "src/lib.rs"

[dependencies]

# Internal
crockford = { path = "../../lib/crockford" }
errors = { path = "../../lib/errors" }

# probably need to have it's own module.
filesys = { path = "../../lib/files/filesys" }
hashing = { path = "../../lib/files/hashing" }
mimetypes = { path = "../../lib/files/mimetypes" }



# Workspace hack (faster compile times)
my-workspace-hack = { version = "0.1", path = "../../my-workspace-hack" }

# External
# (none yet)

[dev-dependencies]
# (none yet)
