[package]
name = "buckets"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
name = "buckets"
path = "src/lib.rs"

[package.metadata.cargo-udeps.ignore]
normal = ["my-workspace-hack"]

[dependencies]

# Internal
crockford = { path = "../../lib/data/crockford" }
errors = { path = "../../lib/errors" }


# Workspace hack (faster compile times)
my-workspace-hack = { version = "0.1", path = "../../my-workspace-hack" }

# External
# (none yet)

[dev-dependencies]
# (none yet)
