[package]
name = "enums_public"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
name = "enums_public"
path = "src/lib.rs"

[package.metadata.cargo-udeps.ignore]
normal = ["my-workspace-hack"]

[dependencies]
# Internal
enums = { path = "../enums" }
errors = { path = "../../lib/errors" }

# Workspace hack (faster compile times)
my-workspace-hack = { version = "0.1", path = "../../my-workspace-hack" }

# Serialization
serde = "1.0.125"
serde_derive = "1.0.125"

utoipa = { version = "4", features = ["chrono","actix_extras"] }

[dev-dependencies]

# Enum utilities
strum = { version = "0.26", features = ["derive"] }

# Test serialization
serde_json = "1.0.108"
toml = "0.8.14"
