[package]
name = "enums_public"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
name = "enums_public"
path = "src/lib.rs"

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration = { version = "0.1", path = "../../workspace-build-acceleration" }

# Internal
enums = { path = "../enums" }

# Serialization
serde = "1.0.125"
serde_derive = "1.0.125"

utoipa = { version = "4", features = ["chrono","actix_extras"] }

[dev-dependencies]

# Enum utilities
strum = { version = "0.26", features = ["derive"] }

# Test serialization
serde_json = "1.0.108"
toml = "0.8.14"
