[package]
name = "reusable_types"
publish = false
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]

[lib]
name = "reusable_types"
path = "src/lib.rs"

[dependencies]

# Internal
# (none)

# External
chrono = { version = "0.4.19", features = ["serde"] }

# Serialization
serde = "1.0.125"
serde_derive = "1.0.125"

# MySql Database
sqlx = { version = "0.6.2", features = [ "mysql", "runtime-actix-native-tls", "offline", "chrono" ] }
my-workspace-hack = { version = "0.1", path = "../../../my-workspace-hack" }
