[package]
name = "reusable_types"
publish = false
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]

[lib]
name = "reusable_types"
path = "src/lib.rs"

[dependencies]

# Internal
# (none)

# External
chrono = { version = "0.4.22", features = ["serde"] }

# Serialization
serde = "1.0.125"
serde_derive = "1.0.125"

# MySql Database
sqlx = { version = "0.7.2", features = [ "mysql", "runtime-tokio", "tls-rustls", "chrono" ] }
my-workspace-hack = { version = "0.1", path = "../../../my-workspace-hack" }

[dev-dependencies]
# Test serialization
#serde_json = "1.0.64"
toml = "0.5.8"
