[package]
name = "tokens"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
name = "tokens"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = "1.0.125"
serde_derive = "1.0.125"

# Random
rand = "0.8.5"

sqlx = { version = "0.7.2", features = [ "mysql", "runtime-tokio", "tls-rustls", "chrono" ] }
sqlx-core = { version = "0.7.2" }
my-workspace-hack = { version = "0.1", path = "../../../my-workspace-hack" }

utoipa = { version = "4", features = ["chrono","actix_extras"] }

[dev-dependencies]

# Enum utilities
strum = { version = "0.25", features = ["derive"] }

# Test serialization
serde_json = "1.0.108"
toml = "0.5.8"
