[package]
name = "fakeyou_client"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[lib]
name = "fakeyou_client"
path = "src/lib.rs"

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration.workspace = true

# Internal
enums.workspace = true
errors.workspace = true
tokens.workspace = true

# External
bytes.workspace = true
chrono.workspace = true
log.workspace = true
once_cell.workspace = true

# Serialization
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
toml.workspace = true

# HTTP
backoff = { version = "0.4.0", features = ["futures"] } # Exponential backoff retry
reqwest = { version = "0.11", features = ["json", "cookies"] } # HTTP Client

[dev-dependencies]
# None yet
