[package]
name = "google_drive_common"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[lib]
name = "google_drive_common"
path = "src/lib.rs"

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration.workspace = true

# Internal
crockford.workspace = true
errors.workspace = true
subprocess_common = { path = "../../lib/subprocess_common" }

# External
anyhow.workspace = true
log.workspace = true
tempdir.workspace = true

