[package]
name = "database-cleanup"
publish = false
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]

[[bin]]
name = "database-cleanup"
path = "src/main.rs"

[dependencies]

# Internal
config = { path = "../../lib/config" }
container_common = { path = "../../lib/container_common" }

# External
anyhow = "1.0.40"
chrono = { version = "0.4.19", features = ["serde"] }
# TODO/NB: Commenting out clap4 as it prevents windows builds
# clap4 = { package = "clap", version = "4.0" } # TODO/NB: We're using an older version of clap elsewhere, hence the naming.
dotenv = "0.15.0"
easyenv = "0.0.6"
hostname = "0.3.1"
log = "0.4.14"

# Serialization
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
