[package]
name = "kubectl-pod-cleanup"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[[bin]]
name = "kubectl-pod-cleanup"
path = "src/main.rs"

[dependencies]
# Internal
config = { path = "../../lib/deprecated/config" }
easyenv = { path = "../../lib/easyenv" }
errors = { path = "../../lib/errors" }

# External
itertools = "0.11.0"
log = "0.4.20"
once_cell = "1.18.0"
rand = "0.8.1"
regex = "1.10.0"

# Async Runtime
# NB: Not using Tokio here since everything is blocking so far.
# tokio = { version = "1.6.0", features = ["full"] }

[dev-dependencies]
# None yet
